src/rules/snapshots/pg_migration_lint__rules__pgm509__tests__rename_table_to_mixed_case_fires.snap
---
source: src/rules/pgm509.rs
expression: findings
---
- rule_id: PGM509
  severity: Info
  message: "Table 'Users' (renamed from 'users') requires double-quoting (contains uppercase characters)."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
