src/rules/snapshots/pg_migration_lint__rules__pgm509__tests__reserved_word_column_name_fires.snap
---
source: src/rules/pgm509.rs
expression: findings
---
- rule_id: PGM509
  severity: Info
  message: "Column 'select' on table 'items' requires double-quoting (PostgreSQL reserved word)."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
